Thu Apr 20 13:46:42 2006  Tim Janik  <timj@gtk.org>

	* gtk/gtkclist.h (struct _GtkCList): 
	* gtk/gtkstatusbar.h (struct _GtkStatusbarClass): stop using GMemChunk 
	in public header files which is now deprecated.
	
	* tests/Makefile.am:
	* demos/gtk-demo/Makefile.am:
	* demos/Makefile.am:
	* modules/engines/pixbuf/Makefile.am: backed out my previous "fix" of
	defining -DGTK_COMPILATION, which just covered GMemChunk deprecation
	problems.

Wed Apr 19 18:24:12 2006  Tim Janik  <timj@imendio.com>

	* gtk/gtkcombobox.c gtk_combo_box_grab_focus(): when ::hildonlike
	is TRUE, use gtk_combo_box_entry_grab_focus() to grab focus for
	GtkComboBoxEntry widgets. this fixes N#25274.
	
	* gtk/gtkcomboboxentry.h:
	* gtk/gtkcomboboxentry.c: export gtk_combo_box_entry_grab_focus().

Thu Apr 13 16:04:29 2006  Tim Janik  <timj@imendio.com>

	* tests/Makefile.am:
	* demos/gtk-demo/Makefile.am:
	* demos/Makefile.am:
	* modules/engines/pixbuf/Makefile.am: added -DGTK_COMPILATION so 
	GMemChunk isn't deprecated when including glib-2.10 headers.

2006-04-14  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkwidget.c (gtk_widget_set_focus_handling,
	gtk_widget_enter_notify_event, gtk_widget_leave_notify_event,
	gtk_widget_button_release_event, gtk_widget_button_press_event,
	on_same_widget, mouse_pressed, GtkWidgetPrivate:state_set,
	gtk_widget_ensure_style): Remove (almost) all traces of two year old
	'hildon focus handling' kludge; add deprecation note to the rest.
	* gtk/gtkwindow.c (gtk_window_focus_weak_notify,
	GtkWindowPrivate:prev_focus_widget): Removed
	* gtk/gtkwindow.c (gtk_window_get_prev_focus_widget,
	gtk_window_set_prev_focus_widget): Leave empty stubs for binary
	compatibility (HildonGrid)
	N#25803

2006-04-07  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* configure.in (LIBTOOL_EXPORT_OPTIONS): Stop exporting two extra
	symbols hildon-fm doesn't need anymore.

2006-04-05  Tomas Junnonen  <tomas.junnonen@nokia.com>
	