@@ -64,7 +64,6 @@ GtkWidget  *gtk_combo_box_entry_new_with_model  (GtkTreeModel     *model,
 void        gtk_combo_box_entry_set_text_column (GtkComboBoxEntry *entry_box,
                                                  gint              text_column);
 gint        gtk_combo_box_entry_get_text_column (GtkComboBoxEntry *entry_box);
-void        gtk_combo_box_entry_grab_focus      (GtkWidget *widget);
 
 /* convenience -- text */
 GtkWidget  *gtk_combo_box_entry_new_text        (void);
